# tofu-search

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_search.py  custom_llm.py  with_openai_filter.py
tests/: conftest.py  test_authority.py  test_baseline_pure.py  test_browser_fallback.py  test_cleanup.py  test_deadline.py  test_engines.py  test_file_assets.py  test_host_throttle.py  test_orchestrator_race.py  test_playwright_pool.py  test_prefetch_gate.py  test_proxy_mode.py  test_reader_handlers.py  test_security.py  test_verify_citations.py  test_vertical_detect.py  test_vertical_fetch.py
tofu_search/: __init__.py  config.py  http_client.py  llm_adapter.py  log.py  providers.py
tofu_search/fetch/: __init__.py  content_filter.py  core.py  html_extract.py  http.py  interactive_login.py  pdf_extract.py  playwright_pool.py  readers.py  utils.py
tofu_search/search/: __init__.py  _common.py  authority.py  browser_fallback.py  dedup.py  deepen.py  format.py  orchestrator.py  prefetch_gate.py  proxy_mode.py  rerank.py  vertical.py
tofu_search/search/engines/: __init__.py  bing.py  brave.py  ddg.py  marginalia.py  searxng.py  xhs.py
tofu_search/search/vertical/: __init__.py  arxiv.py  base.py  cve.py  doi.py  github.py  hf_papers.py  ip.py  npm.py  pypi.py  registry.py  semantic_scholar.py  stock.py
tofu_search/verify/: __init__.py  citations.py  parse.py
