[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tofu-search"
version = "0.1.0"
description = "Multi-engine web search with LLM content filtering — standalone library from Tofu AI assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tofu Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "requests>=2.28",
    "trafilatura>=1.6",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
    "urllib3>=1.26",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
pdf = ["pymupdf>=1.23", "pymupdf4llm>=0.0.5"]
all = ["playwright>=1.40", "pymupdf>=1.23", "pymupdf4llm>=0.0.5"]
server = ["flask>=3.0"]

[project.urls]
Homepage = "https://github.com/rangehow/tofu-search"
Documentation = "https://github.com/rangehow/tofu-search#readme"

[tool.setuptools.packages.find]
include = ["tofu_search*"]
