[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tofu-search"
version = "0.5.1"
description = "Multi-engine web search, vertical lookups, and content fetching with optional LLM filtering — standalone library from the Tofu AI assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tofu Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "requests>=2.32.4",
    "trafilatura>=1.6",
    "beautifulsoup4>=4.13.4",
    "python-dateutil>=2.8",
    "urllib3>=2.5",
    # lxml is a TRANSITIVE dep of trafilatura, NOT imported by tofu_search
    # directly. All BeautifulSoup parsing in this package uses 'html.parser'
    # (see search/_common.py:soup_of) — lxml 6.x/libxml2 can segfault under
    # concurrent threads, so the only lxml consumer (trafilatura.extract) is
    # serialized under _TRAFILATURA_LOCK in fetch/html_extract.py. Pinned here
    # with a floor >=5.3 to keep a known-good version resolved; do NOT switch
    # any bs4 construction to the 'lxml' parser.
    "lxml>=5.3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.49"]
pdf = ["pymupdf>=1.24", "pymupdf4llm>=0.0.17"]
all = ["playwright>=1.49", "pymupdf>=1.24", "pymupdf4llm>=0.0.17"]
server = ["flask>=3.0"]
test = ["pytest>=8.0", "pytest-cov>=4.1"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/rangehow/tofu-search"
Documentation = "https://github.com/rangehow/tofu-search#readme"

[tool.setuptools.packages.find]
include = ["tofu_search*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [".tofu_trash"]

# Focused on bug-catching rules (pyflakes, bugbear, import-sorting). The
# broader E/W/UP style rules are deliberately deferred to avoid a large
# reformat of the extracted codebase; tighten this over time.
[tool.ruff.lint]
select = ["F", "I", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
